# Helios-Engine

./: .gitignore  CANDLE_FEATURE_IMPLEMENTATION.md  CHANGELOG.md  CHANGELOG_IMPROVEMENTS.md  CHANGES_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  FIXES_APPLIED.md  FOLDER_STRUCTURE.md  FOREST_FINAL_SUMMARY.md  FOREST_OPTIMIZATION_SUMMARY.md  LICENSE  NEW_FEATURES.md  PRE_PUBLISH_CHECKLIST.md  PUBLISHING.md  QUICKREF.md  README.md  SUMMARY.md  USAGE.md  config.example.toml  custom_endpoints.example.toml  custom_endpoints.toml  index.html  print.html  searchindex.js  tmp_rovodev_test_local.rs  toc.html
.github/workflows/: mdbook.yml  metrics.yml  pages.yml  rust.yml  rust_ad.yml  rust_dep_an.yml  rust_docs.yml  rust_quality.yml  rust_sec.yml
book/: README.md  book.toml
book/.github/workflows/: mdbook.yml
book/book/: 404.html  index.html  introduction.html  print.html  searchindex.js  toc.html  toc.js
book/book/api_reference/: serve_module.html
book/book/contributing/: how_to_contribute.html
book/book/core_concepts/: agents.html  chat.html  error_handling.html  llms.html  react.html
book/book/examples/: overview.html
book/book/forest_of_agents/: communication.html  coordinator_based_planning.html  introduction.html
book/book/getting_started/: configuration.html  installation.html  your_first_agent.html
book/book/rag/: embeddings.html  introduction.html  vector_stores.html
book/book/tools/: creating_tools.html  tool_builder.html  (+1 more)
book/src/: SUMMARY.md  introduction.md
core_concepts/: agents.html  llms.html
docs/: ADVANCED.md  API.md  ARCHITECTURE.md  AUTOFOREST.md  CACHE_LOADING_FLOW.txt  CANDLE_LOCAL_SETUP.md  CANDLE_QUICK_START.md  CODE_QUALITY_IMPROVEMENTS.md  CONFIGURATION.md  CRITICAL_FIXES.md  CUSTOM_ENDPOINTS.md  CUSTOM_ENDPOINTS_MIGRATION.md  ENDPOINTS_QUICK_REFERENCE.md  FEATURES.md  FOLDER_STRUCTURE.md  FOREST.md  FOREST_COORDINATOR_PLANNING.md  FOREST_ENHANCEMENT_SUMMARY.md  FOREST_OF_AGENTS_UPDATES.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  PROJECT_OVERVIEW.md  QUICKREF.md  QUICKSTART.md  QUICK_START_QWEN2.5.md  RAG.md  REACT.md  README.md  SETUP_COMPLETE.md  SIMPLE_SYNTAX.md  STREAMING.md  SYNTAX_IMPROVEMENTS.md  SYNTAX_IMPROVEMENTS_SUMMARY.md  TOOLS.md  TOOL_BUILDER.md  TOOL_BUILDER_QUICKREF.md  TOOL_BUILDER_SIMPLIFIED.md  TOOL_BUILDER_SUMMARY.md  TOOL_CREATION_SIMPLE.md  (+3 more)
examples/: README.md  agent_with_file_tools.rs  agent_with_memory_db.rs  agent_with_rag.rs  agent_with_tools.rs  auto_forest_demo.rs  basic_chat.rs  complete_demo.rs  custom_tool.rs  direct_llm_usage.rs  forest_of_agents.rs  forest_simple_demo.rs  forest_with_coordinator.rs  forest_with_file_analysis.rs  local_streaming.rs  multiple_agents.rs  overview.html  quickstart.rs  rag_advanced.rs  rag_in_memory.rs  rag_qdrant_comparison.rs  react_agent.rs  react_comparison.rs  react_custom_prompt.rs  react_debugging.rs  send_message_tool_demo.rs  serve_agent.rs  serve_simple_endpoints.rs  serve_with_custom_endpoints.rs  streaming_chat.rs  tool_builder_demo.rs  tool_builder_simple_demo.rs  ultra_simple.rs
forest_of_agents/: coordinator_based_planning.html
getting_started/: configuration.html  your_first_agent.html
src/: agent.rs  auto_forest.rs  candle_models.rs  candle_provider.rs  chat.rs  config.rs  endpoint_builder.rs  error.rs  forest.rs  lib.rs  llm.rs  main.rs  rag.rs  rag_tool.rs  serve.rs  tool_builder.rs  tool_macro.rs  tools.rs
tests/: README.md  forest_planning_tests.rs  integration_tests.rs  rag_tests.rs  react_tests.rs
tools/: creating_tools.html  using_tools.html
(+20 files in other folders)
