[package]
name = "helios-engine"
version = "0.2.4"
edition = "2021"
rust-version = "1.70"
description = "A powerful and flexible Rust framework for building LLM-powered agents with tool support Both locally and online"
documentation = "https://docs.rs/helios-engine"
readme = "README.md"
homepage = "https://github.com/Ammar-Alnagar/Helios.git"
repository = "https://github.com/Ammar-Alnagar/Helios.git"
license = "Apache-2.0 OR MIT"
keywords = ["Llama_cpp", "agent", "ai", "llm", "openai"]
categories = ["api-bindings", "asynchronous", "command-line-utilities"]

[lib]
name = "helios_engine"
path = "src/lib.rs"

[[bin]]
name = "helios-engine"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
futures = "0.3"
libc = "0.2"
llama-cpp-2 = "0.1"
regex = "1.10"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.0"
thiserror = "1.0"
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2.4"
